2006-02-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign-pajek-parser.y : better vertex and edge parameter 
	handling, support for adjacency matrices

2006-02-07  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_pajek) :added
	* src/foreign-pajek-lexer.l : added
	* src/foreign-pajek-parser.y : added
	* examples/simple/foreign.c : added

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : motif count correct even
	if search tree is cut, works with graphs containing loops

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : added randomized cuts
	* examples/simple/igraph_motifs_randesu.c : updated

2006-02-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_search) : added

	* src/motifs.c (igraph_motifs_randesu) : isomorphism classes added
	* src/topology.c (igraph_isoclass_subgraph) : added

	* examples/simple/topology.c : added
	* examples/simple/igraph_layout_lgl.c : smaller graph, faster
	* examples/simple/igraph_motifs_randesu.c : updated

2006-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/motifs.c (igraph_motifs_randesu) : bug corrected

2006-02-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/igraph_stack.c (igraph_stack_top) : added

	* src/motifs.c (igraph_motifs_randesu) : added
	* examples/simple/igraph_motifs_randesu.c : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_binsearch) : bug corrected

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_growing_traits_game) :
	renamed to igraph_callaway_traits_game
	(igraph_establishment_game) : added

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/random.c (igraph_random_sample) : correct upper limit bug

2006-02-03  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/vector.c (igraph_vector_binsearch) : modified to find "possible"
	place of element even if it's not in the vector