@@ -16,6 +16,7 @@
 <section><title>Shortest Path Related Functions</title>
 <!-- doxrox-include igraph_shortest_paths -->
 <!-- doxrox-include igraph_get_shortest_paths -->
+<!-- doxrox-include igraph_get_all_shortest_paths -->
 <!-- doxrox-include igraph_average_path_length -->
 <!-- doxrox-include igraph_diameter -->
 </section>
