@@ -88,7 +88,8 @@ export(layout.random, layout.circle, layout.fruchterman.reingold,
 export(subgraph, simplify, degree, degree.distribution, diameter,
        closeness, subcomponent, betweenness, bibcoupling, cocitation,
        shortest.paths, minimum.spanning.tree, edge.betweenness,
-       get.shortest.paths, average.path.length, transitivity)
+       get.shortest.paths, average.path.length, transitivity,
+       get.all.shortest.paths)
 
 # plotting
 
